# copier-python-cdemonchy

./: README.md.jinja  copier.yml  docker-compose.yml  docker-compose.yml.jinja  project-slug.jinja  pyproject.toml.jinja
.devcontainer/: devcontainer.json.jinja
.github/workflows/: backend.yml.jinja  pre-commit.yml.jinja
api/: Dockerfile.jinja  README.md  pyproject.toml.jinja
api/api/: main.py
api/integration_tests/: TODO  workspace.yml
api/integration_tests/collections/api/: root.yml
api/tests/: test_hello_world.py  test_main.py
backend/: Dockerfile  Dockerfile.jinja  README.md  pyproject.toml  pyproject.toml.jinja
backend/backend/: main.py
backend/tests/: test_main.py
models/: README.md  pyproject.toml  pyproject.toml.jinja
models/models/: hello_world.py
models/tests/: test_hello_world.py
